move to .deb package